Worked through weather & photo classes with stubs
Have basic functionality 80% completed. Need to work through tag names
for photos, then integrate with real web services.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <input id="location" placeholder="Enter your address" type="text"></input>
             <button id="location-submit">Search</button>
         </div>
+
+        <div id="weather"></div>
+
+        <div id="photo"></div>
         
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=places"></script>
         <script src="js/libs/require.js"></script>
